# uv-aws-lambda

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/demo/: __init__.py
