[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Дамјан Георгиевски", email = "gdamjan@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.81",
]

[project.scripts]
demo = "demo:main"

# TODO: switch to uv build system once it's GA
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
