[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Дамјан Георгиевски", email = "gdamjan@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.81",
]

[project.scripts]
demo = "demo:main"

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.9",
]
